--- a/trabalho/src/components/layout/Menu.css
+++ b/trabalho/src/components/layout/Menu.css
@@ -1,7 +1,7 @@
 .Menu {
     display: flex;
-    flex-basis: 250px;
-    background-color: #14273e;
+    flex-basis: 170px;
+    background-color: #9370DB;
 }
 
 .Menu nav {
@@ -23,7 +23,7 @@
     margin-bottom: 10px;
     text-decoration: none;
     color: #AFEEEE;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 
 .Menu li a:hover {
