--- a/trabalho/src/views/contents/UseState.css
+++ b/trabalho/src/views/contents/UseState.css
@@ -13,7 +13,7 @@
     padding: 7px;
     background-color: #14273e;
     border-width: 1px;
-    border-color: gray;
+    border-color: Lavender;
     width: 80%;
     font-size: 1.2rem;
     color: #fff;
